--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,35 @@
-SECRET_KEY='=ug_ucl@yi6^mrcjyz%(u0%&g2adt#bz3@yos%#@*t#t!ypx=a'
+SECRET_KEY='=ug_ucl@yi6^mrcjyz%(u0%&g2adt#bz3@yos%#@*t#t!ypx'
 DATABASE_URL=psql://postgres:postgres@127.0.0.1:5432/gallery
 REDIS_LOCATION=redis://localhost:6379
 
 ALLOWED_HOSTS=127.0.0.1,localhost
 DJANGO_SETTINGS_MODULE=config.django.local
+
+
+# S3 AWS 
+
+DEFAULT_FILE_STORAGE=storages.backends.s3boto3.S3Boto3Storage
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_STORAGE_BUCKET_NAME=freelancer
+AWS_S3_ENDPOINT_URL=https://storage.iran.liara.space
+AWS_QUERYSTRING_AUTH=False
+AWS_S3_FILE_OVERWRITE=False
+AWS_DEFAULT_ACL=public-read
+AWS_SERVICE_NAME=s3
+
+
+# JWT 
+
+
+
+# Celery 
+CELERY_RESULT_BACKEND=redis://redis:6379
+CELERY_BROKER_URL=redis://redis:6379
+
+
+# Google
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URL=http://127.0.0.1:8000/api/auth/google/callback/
